--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -582,10 +582,6 @@ video {
   margin-right: 0.75rem;
 }
 
-.ml-\[20px\] {
-  margin-left: 20px;
-}
-
 .ml-\[10px\] {
   margin-left: 10px;
 }
@@ -600,6 +596,14 @@ video {
 
 .mt-1 {
   margin-top: 0.25rem;
+}
+
+.mt-\[50px\] {
+  margin-top: 50px;
+}
+
+.mt-\[100px\] {
+  margin-top: 100px;
 }
 
 .flex {
@@ -618,6 +622,10 @@ video {
   height: 70px;
 }
 
+.min-h-\[100vh\] {
+  min-height: 100vh;
+}
+
 .w-\[400px\] {
   width: 400px;
 }
@@ -626,12 +634,12 @@ video {
   width: 300px;
 }
 
-.cursor-pointer {
-  cursor: pointer;
+.w-\[350px\] {
+  width: 350px;
 }
 
-.grid-cols-3 {
-  grid-template-columns: repeat(3, minmax(0, 1fr));
+.cursor-pointer {
+  cursor: pointer;
 }
 
 .grid-cols-2 {
@@ -658,6 +666,10 @@ video {
   justify-content: space-between;
 }
 
+.justify-evenly {
+  justify-content: space-evenly;
+}
+
 .gap-3 {
   gap: 0.75rem;
 }
@@ -670,13 +682,26 @@ video {
   border-radius: 10px;
 }
 
+.rounded-lg {
+  border-radius: 0.5rem;
+}
+
 .border-r-2 {
   border-right-width: 2px;
+}
+
+.border-solid {
+  border-style: solid;
 }
 
 .border-gray-800 {
   --tw-border-opacity: 1;
   border-color: rgb(31 41 55 / var(--tw-border-opacity));
+}
+
+.border-white {
+  --tw-border-opacity: 1;
+  border-color: rgb(255 255 255 / var(--tw-border-opacity));
 }
 
 .bg-gray-600 {
@@ -689,8 +714,21 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
+.bg-black {
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+}
+
 .p-\[10px\] {
   padding: 10px;
+}
+
+.p-3 {
+  padding: 0.75rem;
+}
+
+.p-4 {
+  padding: 1rem;
 }
 
 .px-\[10px\] {
@@ -701,6 +739,11 @@ video {
 .py-\[20px\] {
   padding-top: 20px;
   padding-bottom: 20px;
+}
+
+.py-\[50px\] {
+  padding-top: 50px;
+  padding-bottom: 50px;
 }
 
 .text-left {
@@ -729,10 +772,6 @@ video {
 }
 
 @media (min-width: 768px) {
-  .md\:grid-cols-2 {
-    grid-template-columns: repeat(2, minmax(0, 1fr));
-  }
-
   .md\:grid-cols-3 {
     grid-template-columns: repeat(3, minmax(0, 1fr));
   }
