--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -626,20 +626,20 @@ video {
   min-height: 100vh;
 }
 
-.w-\[400px\] {
-  width: 400px;
+.w-\[350px\] {
+  width: 350px;
 }
 
 .w-\[300px\] {
   width: 300px;
 }
 
-.w-\[350px\] {
-  width: 350px;
-}
-
 .cursor-pointer {
   cursor: pointer;
+}
+
+.list-none {
+  list-style-type: none;
 }
 
 .grid-cols-2 {
@@ -712,11 +712,6 @@ video {
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
-.bg-black {
-  --tw-bg-opacity: 1;
-  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
 }
 
 .p-\[10px\] {
