--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -602,6 +602,10 @@ video {
   margin-top: 50px;
 }
 
+.mt-4 {
+  margin-top: 1rem;
+}
+
 .mt-\[100px\] {
   margin-top: 100px;
 }
@@ -620,6 +624,10 @@ video {
 
 .h-\[70px\] {
   height: 70px;
+}
+
+.h-\[auto\] {
+  height: auto;
 }
 
 .min-h-\[100vh\] {
@@ -686,6 +694,10 @@ video {
   border-radius: 0.5rem;
 }
 
+.rounded-xl {
+  border-radius: 0.75rem;
+}
+
 .border-r-2 {
   border-right-width: 2px;
 }
@@ -722,8 +734,8 @@ video {
   padding: 0.75rem;
 }
 
-.p-4 {
-  padding: 1rem;
+.p-\[100px\] {
+  padding: 100px;
 }
 
 .px-\[10px\] {
@@ -736,9 +748,36 @@ video {
   padding-bottom: 20px;
 }
 
+.py-1 {
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
+}
+
+.px-3 {
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
+}
+
 .py-\[50px\] {
   padding-top: 50px;
   padding-bottom: 50px;
+}
+
+.px-\[100px\] {
+  padding-left: 100px;
+  padding-right: 100px;
+}
+
+.pt-\[100px\] {
+  padding-top: 100px;
+}
+
+.pt-2 {
+  padding-top: 0.5rem;
+}
+
+.pb-\[200px\] {
+  padding-bottom: 200px;
 }
 
 .text-left {
