--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -606,10 +606,6 @@ video {
   margin-top: 1rem;
 }
 
-.mt-\[100px\] {
-  margin-top: 100px;
-}
-
 .flex {
   display: flex;
 }
@@ -626,12 +622,8 @@ video {
   height: 70px;
 }
 
-.h-\[auto\] {
-  height: auto;
-}
-
-.min-h-\[100vh\] {
-  min-height: 100vh;
+.h-\[100vh\] {
+  height: 100vh;
 }
 
 .w-\[350px\] {
@@ -690,30 +682,21 @@ video {
   border-radius: 10px;
 }
 
-.rounded-lg {
-  border-radius: 0.5rem;
-}
-
 .rounded-xl {
   border-radius: 0.75rem;
+}
+
+.rounded-lg {
+  border-radius: 0.5rem;
 }
 
 .border-r-2 {
   border-right-width: 2px;
 }
 
-.border-solid {
-  border-style: solid;
-}
-
 .border-gray-800 {
   --tw-border-opacity: 1;
   border-color: rgb(31 41 55 / var(--tw-border-opacity));
-}
-
-.border-white {
-  --tw-border-opacity: 1;
-  border-color: rgb(255 255 255 / var(--tw-border-opacity));
 }
 
 .bg-gray-600 {
@@ -756,16 +739,6 @@ video {
 .px-3 {
   padding-left: 0.75rem;
   padding-right: 0.75rem;
-}
-
-.py-\[50px\] {
-  padding-top: 50px;
-  padding-bottom: 50px;
-}
-
-.px-\[100px\] {
-  padding-left: 100px;
-  padding-right: 100px;
 }
 
 .pt-\[100px\] {
